tests/cases/compiler/callExpressionWithMissingTypeArgument1/index.ts
Foo<a,,b>();
//~^ ERROR: Identifier expected.
//~| ERROR: Cannot find name 'Foo'.
//~| ERROR: Cannot find name 'a'.
//~| ERROR: Cannot find name 'b'.
